--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
 <p>This is an app.</p>
 
-<script src="pch.js"></script>
+<div id="brush-root"></div>
+
+<div id="array-element-root"></div>
+
 <script src="index.js"></script>
 
 </body>
